syntax = "proto3";
package auth_proto;

option go_package = "./auth_proto";

import "proto/utils.proto";

service Auth {
    rpc SignIn(SignInForm) returns (utils.JsonResponse) {}
    rpc SignUp(SignUpForm) returns (utils.JsonResponse) {}
}

message SignInForm {
    string username = 1 [json_name="username"];
    string password = 2 [json_name="password"];
}

message SignUpForm {
    string first_name = 1 [json_name="first_name"];
    string last_name = 2 [json_name="last_name"];
    string username = 3 [json_name="username"];
    string password = 4 [json_name="password"];
    string password_confirmation = 5 [json_name="password_confirmation"];
}